# DonutBot

./: .gitignore  Bot.py  Data.py  README.md  pyproject.toml
donutbot/: Bot.py  Data.py  Logic.py  OpenAIQuerier.py
