[project]
name = "donutbot"
version = "1.0.0"
description = "Simple python bot to keep track of my Discord server's donut competition (don't ask)"
authors = [
    {name = "Timst",email = "timst44@gmail.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "py-cord (>=2.7.0,<3.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "inflect (>=7.5.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
